testsuite/tests/rename/should_compile/GHCIImplicitImportNullaryRecordWildcard.script
:set -XRecordWildCards

f x = GHC.Generics.U1 {..}
