testsuite/tests/rename/should_fail/T9815ghci.script
:set -XRecordWildCards

f x = Data.Semigroup.Arg {..}
